--- a/6.22project/detail.html
+++ b/6.22project/detail.html
@@ -28,8 +28,8 @@
         <a href="#">加入购物车</a>
         <a href="#">立即购买</a>
     </script>
-    <script type="text/javascript" src="js/changkun%20(2).js"></script>
-    <script type="text/javascript" src="js/common.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <!--<script type="text/javascript" src="js/common.js"></script>-->
     <script type="text/javascript" src="js/detail.js"></script>
 </body>
 </html>
