--- a/6.22project/index.html
+++ b/6.22project/index.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/common.css">
+
 </head>
 <body>
     <header>
+        <div class="user" id="user">
+            <a href="user.html">注册</a>
+            <a href="Login.html">登录</a>
+        </div>
         <div class="container">
             <input type="text" id="search" class="search" /><button id="search-but" class="search-but">点击搜索</button>
         </div>
@@ -28,7 +33,8 @@
     <footer>
     </footer>
 </body>
-    <script type="text/javascript" src="js/changkun%20(2).js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <!--<script type="text/javascript" src="js/getQueryString.js"></script>-->
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </html>
