--- a/6.22project/search.html
+++ b/6.22project/search.html
@@ -16,17 +16,20 @@
         <nav><ul id="oUl" class="nav-list"></ul></nav>
         <div id="goods" class="goods">
         </div>
+        <div class="sans" id="sans">
+            <div id="paging" class="paging">
+            </div>
+        </div>
         <button id="UP">上一页</button>
         <button id="DOWN">下一页</button>
     </section>
     <footer>
-        <button id="oBut">测试</button>
     </footer>
     <script type="text/zhanghao" >
 
     </script>
 </body>
-    <script type="text/javascript" src="js/changkun%20(2).js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
     <!--<script type="text/javascript" src="js/common.js"></script>-->
     <script type="text/javascript" src="js/search.js"></script>
 </html>
