--- a/6.22project/ajax-1.html
+++ b/6.22project/ajax-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="ajax-1.css">
+    <link rel="stylesheet" href="css/ajax-1.css">
 </head>
 <body>
     <header></header>
