--- a/6.22project/list.html
+++ b/6.22project/list.html
@@ -28,7 +28,7 @@
 
     </footer>
 </body>
-    <script type="text/javascript" src="js/changkun%20(2).js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/list.js"></script>
 </html>
