--- a/shop/List.html
+++ b/shop/List.html
@@ -8,6 +8,7 @@
     <title>一淘</title>
     <link rel="stylesheet" href="css/unify.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/List.css">
 </head>
 <body>
     <header>
@@ -15,12 +16,12 @@
         <div class="header-nav">
             <a href="#">欢迎来到一淘网，阿里巴巴旗下生活省钱利器！</a>
             <ul>
-                <li>
-                    <a href="#" id="login" class="login">亲！请登录</a>
-                    <a href="#" id="register" class="register">或注册</a>
+                <li id="line">
+                    <a id="login" class="login">亲！请登录</a>
+                    <a href="register.html" id="register" class="register">或注册</a>
                 </li>
                 <li><a href="#">我的订单</a></li>
-                <li><a href="#">购物车</a></li>
+                <li><a href="#" id="cart">购物车</a></li>
                 <li><a href="#">消息</a></li>
                 <li><a href="#">我的积分</a></li>
             </ul>
@@ -28,7 +29,7 @@
     </nav>
     <div class="header-top">
         <div class="logo">
-            <a href="#">
+            <a href="index.html">
                 <img src="image/header/logo.png" alt="" class="logo">
             </a>
         </div>
@@ -45,8 +46,17 @@
     </div>
 </header>
     <section>
-        <div  id="goods">
+        <div  id="goodsList">
             <ul ></ul>
+        </div>
+        <div class="standard-img" id="standard-img"><h1></h1></div>
+        <div id="goods" class="goods">
+            <ul></ul>
+            <div class="But">
+                <button id="upBut">上一页</button>
+                    <div id="page" class="page"></div>
+                <button id="downBut">下一页</button>
+            </div>
         </div>
     </section>
     <footer>
@@ -98,4 +108,6 @@
 </body>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/unify.js"></script>
+    <script type="text/javascript" src="js/List.js"></script>
+    <script type="text/javascript" src="js/searchBut.js"></script>
 </html>
