--- a/shop/register.html
+++ b/shop/register.html
@@ -1,63 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>一淘</title>
+    <title>Title</title>
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/register.css">
     <link rel="stylesheet" href="css/unify.css">
-    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
-        <nav>
-            <div class="header-nav">
-                <a href="#">欢迎来到一淘网，阿里巴巴旗下生活省钱利器！</a>
-                <ul>
-                    <li id="line">
-                        <a href="#" id="login" class="login">亲！请登录</a>
-                        <a href="register.html" id="register" class="register">或注册</a>
-                    </li>
-                    <li><a href="#">我的订单</a></li>
-                    <li><a href="#" id="cart">购物车</a></li>
-                    <li><a href="#">消息</a></li>
-                    <li><a href="#">我的积分</a></li>
-                </ul>
-            </div>
-        </nav>
-        <div class="header-top">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="image/header/logo.png" alt="" class="logo">
-                </a>
-            </div>
-            <div class="container">
-                <input type="text" id="search" class="search">
-                <button id="searchBut" class="searchBut">
-                    <img src="image/header/search.png" alt=""></button>
-            </div>
-            <div class="download">
-                <div class="qr-dow">
-                    <img src="image/header/qr.png" alt="">
-                </div>
+    <nav>
+        <div class="header-nav">
+            <a href="#">欢迎来到一淘网，阿里巴巴旗下生活省钱利器！</a>
+            <ul>
+                <li>
+                    <a href="#" id="login" class="login">亲！请登录</a>
+                    <a href="register.html" id="register" class="register">或注册</a>
+                </li>
+                <li><a href="#">我的订单</a></li>
+                <li><a href="#" id="cart">购物车</a></li>
+                <li><a href="#">消息</a></li>
+                <li><a href="#">我的积分</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="header-top">
+        <div class="logo">
+            <a href="index.html">
+                <img src="image/header/logo.png" alt="" class="logo">
+            </a>
+        </div>
+        <div class="container">
+            <input type="text" id="search" class="search">
+            <button id="searchBut" class="searchBut">
+                <img src="image/header/search.png" alt=""></button>
+        </div>
+        <div class="download">
+            <div class="qr-dow">
+                <img src="image/header/qr.png" alt="">
             </div>
         </div>
-    </header>
+    </div>
+</header>
     <section>
-        <div  id="goodsList">
-            <ul id="goodsListUl"></ul>
+        <div class="username" >
+            <i>用户账户:</i>
+            <input type="text" name="username" id="username" placeholder="请输入用户名">
+            <span></span>
         </div>
-        <div class="carousel">
-            <h1>轮播图预留</h1>
-        </div>
-        <div class="standard">
-            <a href="#"></a>
-            <div class="standard-img"><h1>热门商品</h1></div>
-        </div>
-        <div class="goods" id="goods">
-        </div>
+        <div class="password" >
+            <i>用户密码:</i>
+            <input type="password" name="password" id="password" placeholder="请输入密码"><br/>
+            <span></span></div>
+        <div class="confirmPassword" >
+            <i>确认密码:</i>
+            <input type="password" name="password" id="confirmPassword" placeholder="请输入确认密码"><br/>
+            <span></span></div>
+        <div><button id="registerBut" class="registerBut">点击注册</button></div>
     </section>
     <footer>
         <div class="footer-container">
@@ -107,7 +106,6 @@
     </footer>
 </body>
     <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/searchBut.js"></script>
     <script type="text/javascript" src="js/unify.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/register.js"></script>
 </html>
