--- a/shop/index.html
+++ b/shop/index.html
@@ -21,7 +21,7 @@
                         <a href="register.html" id="register" class="register">或注册</a>
                     </li>
                     <li><a href="#">我的订单</a></li>
-                    <li><a href="#" id="cart">购物车</a></li>
+                    <li><a href="cart.html" id="cart">购物车</a></li>
                     <li><a href="#">消息</a></li>
                     <li><a href="#">我的积分</a></li>
                 </ul>
