--- a/shop/cart.html
+++ b/shop/cart.html
@@ -18,7 +18,7 @@
                         <a href="register.html" id="register" class="register">或注册</a>
                     </li>
                     <li><a href="#">我的订单</a></li>
-                    <li><a href="#" id="cart">购物车</a></li>
+                    <li><a href="cart.html" id="cart">购物车</a></li>
                     <li><a href="#">消息</a></li>
                     <li><a href="#">我的积分</a></li>
                 </ul>
@@ -48,7 +48,17 @@
         </div>
         <div class="standard-img" id="standard-img"><h1>购物车</h1></div>
         <div id="goods" class="goods">
-            <ul></ul>
+            <table id="shopping">
+                <tr class="tr-first">
+                    <td class="choice" ><input type="checkbox" id="wholeChoice" checked='checked'>全选</td>
+                    <td class="commodity">商品</td>
+                    <td class="commodity-num">数量</td>
+                    <td class="univalence">单价（元）</td>
+                    <td class="whole">小计（元）</td>
+                    <td class="operation">删除/购买</td>
+                </tr>
+            </table>
+            <div><button id="batch">批量删除</button> <span id="totalPrice">总价：￥0</span><button>提交订单</button></div>
             <div class="But">
                 <button id="upBut">上一页</button>
                 <div id="page" class="page"></div>
