--- a/shop/cart.html
+++ b/shop/cart.html
@@ -58,7 +58,7 @@
                     <td class="operation">删除/购买</td>
                 </tr>
             </table>
-            <div><button id="batch">批量删除</button> <span id="totalPrice">总价：￥0</span><button>提交订单</button></div>
+            <div><button id="batch">批量删除</button> <span id="totalPrice">总价：￥0</span><a href="indent.html">提交订单</a></div>
             <div class="But">
                 <button id="upBut">上一页</button>
                 <div id="page" class="page"></div>
