--- a/shop/index.html
+++ b/shop/index.html
@@ -20,7 +20,7 @@
                         <a href="#" id="login" class="login">亲！请登录</a>
                         <a href="register.html" id="register" class="register">或注册</a>
                     </li>
-                    <li><a href="#">我的订单</a></li>
+                    <li><a href="OMS.html">我的订单</a></li>
                     <li><a href="cart.html" id="cart">购物车</a></li>
                     <li><a href="#">消息</a></li>
                     <li><a href="#">我的积分</a></li>
@@ -49,8 +49,13 @@
         <div  id="goodsList">
             <ul id="goodsListUl"></ul>
         </div>
-        <div class="carousel">
-            <h1>轮播图预留</h1>
+        <div class="carouselContainer">
+        <div class="carousel" id="carousel" >
+            <ul >
+                <li><a href="#"><img src="image/header/TB1BunHRVXXXXagaXXXXXXXXXXX-750-340.jpg" alt=""></a></li>
+                <li><a href="#"><img src="image/header/TB1jT3mRVXXXXXnXXXXXXXXXXXX-750-340.jpg" alt=""></a></li>
+            </ul>
+        </div>
         </div>
         <div class="standard">
             <a href="#"></a>
