--- a/shop/search.html
+++ b/shop/search.html
@@ -17,7 +17,7 @@
                         <a  id="login" class="login">亲！请登录</a>
                         <a href="#" id="register" class="register">或注册</a>
                     </li>
-                    <li><a href="#">我的订单</a></li>
+                    <li><a href="OMS.html">我的订单</a></li>
                     <li><a href="cart.html" id="cart">购物车</a></li>
                     <li><a href="#">消息</a></li>
                     <li><a href="#">我的积分</a></li>
