--- a/shop/index.html
+++ b/shop/index.html
@@ -50,18 +50,55 @@
             <ul id="goodsListUl"></ul>
         </div>
         <div class="carouselContainer">
-        <div class="carousel" id="carousel" >
-            <ul >
-                <li><a href="#"><img src="image/header/TB1BunHRVXXXXagaXXXXXXXXXXX-750-340.jpg" alt=""></a></li>
-                <li><a href="#"><img src="image/header/TB1jT3mRVXXXXXnXXXXXXXXXXXX-750-340.jpg" alt=""></a></li>
-            </ul>
-        </div>
+            <div class="sans">
+                <div id="goodsHot">
+                    <span class="leftSpan" id="leftSpan"><img src="image/section/left.png" alt=""></span>
+                    <ul id="goodsHotUl">
+                        <li><a href="#" ><img src="image/header/hot1.jpg" alt=""></a></li>
+                        <li><a href="#" ><img src="image/header/hot2.jpg" alt=""></a></li>
+                    </ul>
+                    <span class="rightSpan" id="rightSpan"><img src="image/section/right.png" alt=""></span>
+                </div>
+                <div class="carousel" id="carousel" >
+                    <ul id="carouselUl">
+                        <li><a href="#"><img src="image/header/TB1BunHRVXXXXagaXXXXXXXXXXX-750-340.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="image/header/TB1jT3mRVXXXXXnXXXXXXXXXXXX-750-340.jpg" alt=""></a></li>
+                    </ul>
+                    <ul id="circle">
+                        <li class="circleLi"></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div id="userLog">
+                    <div class="headerPortrait"><img src="image/header/head.png" alt=""></div>
+                    <a href="login.html">会员登录</a><a href="register.html">用户注册</a>
+                    <div class="sign-in">
+                        <img src="image/header/signIn1.png" alt="">
+                        <img src="image/header/signIn.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="standard">
             <a href="#"></a>
             <div class="standard-img"><h1>热门商品</h1></div>
         </div>
         <div class="goods" id="goods">
+        </div>
+        <div id="sideber">
+            <a href="cart.html">购物车</a>
+            <div class="cartBut">
+                <span id="clickCart"><img src="image/header/shopping211.png" alt=""></span>
+                <span id="clickTop"><img src="image/header/br_up.png" alt=""></span>
+            </div>
+            <div id="enterCart" class="enterCart">
+                <h1>总计:000000</h1><a href="cart.html">购物车结算</a>
+            </div>
+            <div class="sideberGoods" id="sideberGoods">
+                <ul>
+
+                </ul>
+            </div>
         </div>
     </section>
     <footer>
