--- a/shop/search.html
+++ b/shop/search.html
@@ -51,7 +51,9 @@
             <ul></ul>
             <div class="But">
                 <button id="upBut">上一页</button>
-                <div id="page" class="page"></div>
+                <div id="page" class="page">
+                    <div id="pageBut"></div>
+                </div>
                 <button id="downBut">下一页</button>
             </div>
         </div>
