--- a/shop/List.html
+++ b/shop/List.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/List.css">
 </head>
 <body>
-    <header>
+<header>
     <nav>
         <div class="header-nav">
             <a href="#">欢迎来到一淘网，阿里巴巴旗下生活省钱利器！</a>
@@ -45,69 +45,71 @@
         </div>
     </div>
 </header>
-    <section>
-        <div  id="goodsList">
-            <ul ></ul>
+<section>
+    <div  id="goodsList">
+        <ul ></ul>
+    </div>
+    <div class="standard-img" id="standard-img"><h1></h1></div>
+    <div id="goods" class="goods">
+        <ul></ul>
+        <div class="But">
+            <button id="upBut">上一页</button>
+            <div id="page" class="page">
+                <div id="pageBut"></div>
+            </div>
+            <button id="downBut">下一页</button>
         </div>
-        <div class="standard-img" id="standard-img"><h1></h1></div>
-        <div id="goods" class="goods">
-            <ul></ul>
-            <div class="But">
-                <button id="upBut">上一页</button>
-                    <div id="page" class="page"></div>
-                <button id="downBut">下一页</button>
-            </div>
+    </div>
+</section>
+<footer>
+    <div class="footer-container">
+        <div class="footer-left">
+            <ul>关于我们
+                <li><a href="#">关于我们</a></li>
+                <li><a href="#">关于我们</a></li>
+                <li><a href="#">关于我们</a></li>
+                <li><a href="#">关于我们</a></li>
+            </ul>
+            <ul>帮助中心
+                <li><a href="#">帮助中心</a></li>
+                <li><a href="#">帮助中心</a></li>
+                <li><a href="#">帮助中心</a></li>
+                <li><a href="#">帮助中心</a></li>
+            </ul>
         </div>
-    </section>
-    <footer>
-        <div class="footer-container">
-            <div class="footer-left">
-                <ul>关于我们
-                    <li><a href="#">关于我们</a></li>
-                    <li><a href="#">关于我们</a></li>
-                    <li><a href="#">关于我们</a></li>
-                    <li><a href="#">关于我们</a></li>
-                </ul>
-                <ul>帮助中心
-                    <li><a href="#">帮助中心</a></li>
-                    <li><a href="#">帮助中心</a></li>
-                    <li><a href="#">帮助中心</a></li>
-                    <li><a href="#">帮助中心</a></li>
-                </ul>
-            </div>
-            <div class="footer-canter">
-                <h1>手机淘一淘</h1>
-                <img src="image/header/qr.png" alt="">
-            </div>
-            <div class="footer-right">
-                <ul>优惠地图
-                    <li><a href="#">优惠地图</a></li>
-                    <li><a href="#">优惠地图</a></li>
-                    <li><a href="#">优惠地图</a></li>
-                    <li><a href="#">优惠地图</a></li>
-                </ul>
-                <ul>商家合作
-                    <li><a href="#">商家合作</a></li>
-                    <li><a href="#">商家合作</a></li>
-                    <li><a href="#">商家合作</a></li>
-                    <li><a href="#">商家合作</a></li>
-                </ul>
-            </div>
-            <p>
-                <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
-                <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
-                <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
-                <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
-                <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
-                <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
-            </p>
-            <h6>Copyright © 2010-2017 ETAO.COM 版权所有</h6>
-            <h6>增值电信业务经营许可证：浙B2-20080224</h6>
+        <div class="footer-canter">
+            <h1>手机淘一淘</h1>
+            <img src="image/header/qr.png" alt="">
         </div>
-    </footer>
+        <div class="footer-right">
+            <ul>优惠地图
+                <li><a href="#">优惠地图</a></li>
+                <li><a href="#">优惠地图</a></li>
+                <li><a href="#">优惠地图</a></li>
+                <li><a href="#">优惠地图</a></li>
+            </ul>
+            <ul>商家合作
+                <li><a href="#">商家合作</a></li>
+                <li><a href="#">商家合作</a></li>
+                <li><a href="#">商家合作</a></li>
+                <li><a href="#">商家合作</a></li>
+            </ul>
+        </div>
+        <p>
+            <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
+            <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
+            <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
+            <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
+            <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
+            <a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a><a href="#">阿里巴巴</a>
+        </p>
+        <h6>Copyright © 2010-2017 ETAO.COM 版权所有</h6>
+        <h6>增值电信业务经营许可证：浙B2-20080224</h6>
+    </div>
+</footer>
 </body>
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/unify.js"></script>
-    <script type="text/javascript" src="js/List.js"></script>
-    <script type="text/javascript" src="js/searchBut.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/unify.js"></script>
+<script type="text/javascript" src="js/List.js"></script>
+<script type="text/javascript" src="js/searchBut.js"></script>
 </html>
