--- a/shop/OMS.html
+++ b/shop/OMS.html
@@ -102,5 +102,6 @@
 </body>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/unify.js"></script>
+    <script type="text/javascript" src="js/searchBut.js"></script>
     <script type="text/javascript" src="js/OMS.js"></script>
 </html>
