--- a/shop/cart.html
+++ b/shop/cart.html
@@ -58,12 +58,7 @@
                     <td class="operation">删除/购买</td>
                 </tr>
             </table>
-            <div><button id="batch">批量删除</button> <span id="totalPrice">总价：￥0</span><a href="indent.html">提交订单</a></div>
-            <div class="But">
-                <button id="upBut">上一页</button>
-                <div id="page" class="page"></div>
-                <button id="downBut">下一页</button>
-            </div>
+            <div class="batchContainer"><button id="batch">批量删除</button> <span id="totalPrice">总价：￥0</span><button id="indent">提交订单</button></div>
         </div>
     </section>
     <footer>
@@ -114,6 +109,7 @@
     </footer>
 </body>
     <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/searchBut.js"></script>
     <script type="text/javascript" src="js/unify.js"></script>
     <script type="text/javascript" src="js/cart.js"></script>
 </html>
