--- a/shop/details.html
+++ b/shop/details.html
@@ -48,7 +48,8 @@
         </div>
         <div class="standard-img" id="standard-img"><h1>商品详情</h1></div>
         <div id="goods" class="goods">
-            <div id="goodsDetails" class="goodsDetails"></div>
+            <div id="goodsDetails" class="goodsDetails">
+            </div>
         </div>
     </section>
     <footer>
@@ -99,6 +100,7 @@
     </footer>
 </body>
     <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.js"></script>
     <script type="text/javascript" src="js/unify.js"></script>
     <script type="text/javascript" src="js/details.js"></script>
     <script type="text/javascript" src="js/searchBut.js"></script>
