--- a/shop/indent.html
+++ b/shop/indent.html
@@ -155,6 +155,7 @@
 </body>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/city2.js"></script>
+    <script type="text/javascript" src="js/searchBut.js"></script>
     <script type="text/javascript" src="js/unify.js"></script>
     <script type="text/javascript" src="js/indent.js"></script>
 </html>
