--- a/shop/register.html
+++ b/shop/register.html
@@ -107,5 +107,6 @@
 </body>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/unify.js"></script>
+    <script type="text/javascript" src="js/searchBut.js"></script>
     <script type="text/javascript" src="js/register.js"></script>
 </html>
